<?xml version="1.0"?>
<package>
  <name>smartcar_tf_publisher</name>
  <version>0.0.0</version>
  <description>The smartcar_tf_publisher package</description>

  <license>BSD</license>
  <maintainer email="122551@jnu.ac.kr">Kuyeon Park</maintainer>
  <author email="122551@jnu.ac.kr">Kuyeon Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
